--- a/app/templates/advancedquery2.html
+++ b/app/templates/advancedquery2.html
@@ -55,7 +55,7 @@
         </form>
         <!-- Button trigger modal -->
         <div style="text-align: left;">
-        <button type="button" class="btn btn-outline-info btn-sm" data-bs-toggle="modal" data-bs-target="#task-modal" data-source="New Task" href="http://127.0.0.1:5000/create/+document.getElementById(delete).value">Add Input</button>
+        <button type="button" class="btn btn-outline-info btn-sm" data-bs-toggle="modal" data-bs-target="#task-modal" data-source="New Task" onclick="http://127.0.0.1:5000/create/+document.getElementById(delete).value">Add Input</button>
         </div>
         <div style="text-align: left;">
             <button type="button" class="btn btn-outline-info btn-sm" data-bs-toggle="modal" data-bs-target="#task-modal" data-source="New Task">Update Top</button>
@@ -66,15 +66,7 @@
         </form>
 
         <div style="text-align: left;">
-            <button type="button" class="btn btn-outline-info btn-sm" data-bs-toggle="modal" data-bs-target="#task-modal" data-source="New Task" href="http://127.0.0.1:5000/delete/+document.getElementById(delete).value">Delete Top</button>
-        </div>
-
-        <div style="text-align: left;">
-            <a href="/advance_query1">AdvancedQuery1</a>
-        </div>
-
-        <div style="text-align: left;">
-            <a href="/advance_query2">AdvancedQuery2</a>
+            <button type="button" class="btn btn-outline-info btn-sm" data-bs-toggle="modal" data-bs-target="#task-modal" data-source="New Task" onclick="http://127.0.0.1:5000/delete/+document.getElementById(delete).value">Delete Top</button>
         </div>
 
 
@@ -85,7 +77,6 @@
     <table class="table">
         <thead>
         <tr>
-            <th class="task">InputNumber</th>
             <th class="task">SummonerName</th>
             <th class="status">Kills</th>
             <th class="update">Deaths</th>
@@ -101,7 +92,6 @@
         <tbody>
         {% for item in items %}
             <tr>
-                <td>{{item.InputNumber}}</td>
                 <td>{{item.SummonerName}}</td>
                 <td>{{item.Kills}}</td>
                 <td>{{item.Deaths}}</td>
