--- a/app/templates/advancedquery2.html
+++ b/app/templates/advancedquery2.html
@@ -57,6 +57,10 @@
         <div style="text-align: left;">
         <button type="button" class="btn btn-outline-info btn-sm" data-bs-toggle="modal" data-bs-target="#task-modal" data-source="New Task" onclick="http://127.0.0.1:5000/create/+document.getElementById(delete).value">Add Input</button>
         </div>
+        <form>
+            <label for="delete">Update Data at this InputNumber:</label><br>
+            <input type="text" id="delete" name="delete"><br>
+        </form>
         <div style="text-align: left;">
             <button type="button" class="btn btn-outline-info btn-sm" data-bs-toggle="modal" data-bs-target="#task-modal" data-source="New Task">Update Top</button>
         </div>
