--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -55,10 +55,14 @@
         </form>
         <!-- Button trigger modal -->
         <div style="text-align: left;">
-        <button type="button" class="btn btn-outline-info btn-sm" data-bs-toggle="modal" data-bs-target="#task-modal" data-source="New Task" href="http://127.0.0.1:5000/create/+document.getElementById(delete).value">Add Input</button>
+        <button type="button" class="btn btn-outline-info btn-sm" data-bs-toggle="modal" data-bs-target="#task-modal" data-source="New Task" href="/create/+document.getElementById(delete).value">Add Input</button>
         </div>
+        <form>
+            <label for="delete">Update Data at this InputNumber:</label><br>
+            <input type="text" id="delete" name="delete"><br>
+        </form>
         <div style="text-align: left;">
-            <button type="button" class="btn btn-outline-info btn-sm" data-bs-toggle="modal" data-bs-target="#task-modal" data-source="New Task">Update Top</button>
+            <button type="button" class="btn btn-outline-info btn-sm" data-bs-toggle="modal" data-bs-target="#task-modal" data-source="New Task">Update</button>
         </div>
         <form>
             <label for="delete">Delete Value:</label><br>
@@ -66,7 +70,7 @@
         </form>
 
         <div style="text-align: left;">
-            <button type="button" class="btn btn-outline-info btn-sm" data-bs-toggle="modal" data-bs-target="#task-modal" data-source="New Task" href="http://127.0.0.1:5000/delete/+document.getElementById(delete).value">Delete Top</button>
+            <button type="button" class="btn btn-outline-info btn-sm" data-bs-toggle="modal" data-bs-target="#task-modal" data-source="New Task" href="/delete/+document.getElementById(delete).value">Delete Top</button>
         </div>
 
         <div style="text-align: left;">
